--- a/src/GUI/CrosswordWindow.fxml
+++ b/src/GUI/CrosswordWindow.fxml
@@ -7,7 +7,7 @@
    <children>
       <AnchorPane>
          <children>
-            <GridPane alignment="CENTER" prefHeight="640.0" prefWidth="640.0" style="-fx-background-color: red; -fx-grid-lines-visible: true;" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="30.0">
+            <GridPane alignment="CENTER" prefHeight="640.0" prefWidth="640.0" style="-fx-background-color: beige; -fx-grid-lines-visible: true;" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="30.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
